@@ -1,5 +1,10 @@
 2006-12-27  Sam Steingold  <sds@podval.org>
 
+	* iofkts.tst: test for [ 1412454 ]: format/*print-pretty*
+	interaction: extra newlines
+
+2006-12-27  Sam Steingold  <sds@podval.org>
+
 	* streams.tst: tests for [ 1482465 ]: confusing format error
 	report, cause fill-stream
 
